--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,19 @@
-spring.jpa.hibernate.ddl-auto=create
+# Parametros de hibernate
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+
+# Solo desarollo
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Parametros de conexion
 spring.datasource.url=jdbc:mysql://localhost:3306/listore
 spring.datasource.username=root
 spring.datasource.password=
 
+#Auto cerrar las transacciones
+spring.jpa.properties.javax.persistence.validation.mode=none
+spring.jpa.properties.hibernate.transaction.auto_close_session=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.properties.hibernate.transaction.factory_class=org.hibernate.transaction.JDBCTransactionFactory
 
 server.port=7879
