--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 # Solo desarollo
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 # Parametros de conexion
 spring.datasource.url=jdbc:mysql://localhost:3306/listore
