--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/listore
 spring.datasource.username=root
 spring.datasource.password=
 
-
+springdoc.swagger-ui.path=/docs
+springdoc.model-converters.deprecating-converter.enabled=false
+springdoc.paths-to-exclude=/auth/getAll, /auth/getById
 
 server.port=7879
