--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>listore</description>
     <properties>
         <java.version>17</java.version>
-    </properties>
+    </properties>f
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
