Ajuste docker y base de datos cloud y versionamiento de target para despliegue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,15 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
-# Parametros de conexion
-spring.datasource.url=jdbc:mysql://localhost:3306/listore
-spring.datasource.username=root
-spring.datasource.password=
+# Parametros de conexion local - dejar comentados al hacer commit
+#spring.datasource.url=jdbc:mysql://localhost:3306/listore
+#spring.datasource.username=root
+#spring.datasource.password=
+
+#parametros de conexion despliegue
+spring.datasource.url=jdbc:mysql://ueug4w0tizxrabev:btd8JRnb45c5DUkOKAgq@bsf95yivyypiel4tncp2-mysql.services.clever-cloud.com:3306/bsf95yivyypiel4tncp2
+spring.datasource.username=ueug4w0tizxrabev
+spring.datasource.password=btd8JRnb45c5DUkOKAgq
 
 springdoc.swagger-ui.path=/docs
 
