--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,14 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 #spring.jpa.properties.hibernate.format_sql=true
 
 # Parametros de conexion
-spring.datasource.url=jdbc:mysql://localhost:3306/listore
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/listore
+#spring.datasource.username=root
+#spring.datasource.password=
 
 
-#spring.datasource.url=jdbc:mysql://sql.freedb.tech:3306/freedb_listoredb
-#spring.datasource.username=freedb_listoredbuser
-#spring.datasource.password=CYy&cZPrXq2qQUT
+spring.datasource.url=jdbc:mysql://sql.freedb.tech:3306/freedb_listoredb
+spring.datasource.username=freedb_listoredbuser
+spring.datasource.password=CYy&cZPrXq2qQUT
 
 springdoc.swagger-ui.path=/docs
 
