Ajuste en los filtros de la venta

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.datasource.username=root
 spring.datasource.password=
 
 
-#spring.datasource.url=jdbc:mysql://sql.freedb.tech:3306/freedb_listoredb
-#spring.datasource.username=freedb_listoredbuser
-#spring.datasource.password=CYy&cZPrXq2qQUT
+#spring.datasource.url=jdbc:mysql://listoredb_scorecapwe:6d1d46f7bbaaa16c90041008d07d4893b882d40e@5w3.h.filess.io:3307/listoredb_scorecapwe
+#spring.datasource.username=listoredb_scorecapwe
+#spring.datasource.password=6d1d46f7bbaaa16c90041008d07d4893b882d40e
 
 springdoc.swagger-ui.path=/docs
 
