--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,19 @@ spring.datasource.url=jdbc:mysql://localhost:3306/listore
 spring.datasource.username=root
 spring.datasource.password=
 
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+
+## Postgres datasources
+#spring.datasource.url=jdbc:postgresql://dpg-cjv28bt175es73ci769g-a.oregon-postgres.render.com/listoredb
+#spring.datasource.username=listoredb_user
+#spring.datasource.password=IxsuWY28pZMNFBE5oaUm71lyElnYBJPY
+
+#spring.datasource.driver-class-name=org.postgresql.Driver
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
 springdoc.swagger-ui.path=/docs
 
 server.port=7879
