--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,21 +6,24 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 #spring.jpa.properties.hibernate.format_sql=true
 
 # Parametros de conexion
-#spring.datasource.url=jdbc:mysql://localhost:3306/listore
-#spring.datasource.username=root
-#spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/listore
+spring.datasource.username=root
+spring.datasource.password=
 
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 
 ## Postgres datasources
-spring.datasource.url=jdbc:postgresql://dpg-cjv28bt175es73ci769g-a.oregon-postgres.render.com/listoredb
-spring.datasource.username=listoredb_user
-spring.datasource.password=IxsuWY28pZMNFBE5oaUm71lyElnYBJPY
+#spring.datasource.url=jdbc:postgresql://dpg-cjv28bt175es73ci769g-a.oregon-postgres.render.com/listoredb
+#spring.datasource.username=listoredb_user
+#spring.datasource.password=IxsuWY28pZMNFBE5oaUm71lyElnYBJPY
 
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
 springdoc.swagger-ui.path=/docs
