--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,9 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 
 
 ## Postgres datasources
-spring.datasource.url=jdbc:postgresql://dpg-cjv28bt175es73ci769g-a.oregon-postgres.render.com/listoredb
-spring.datasource.username=listoredb_user
-spring.datasource.password=IxsuWY28pZMNFBE5oaUm71lyElnYBJPY
+spring.datasource.url=jdbc:postgresql://dpg-cqfsmvt6l47c73bl8bug-a.oregon-postgres.render.com/test_h0ts
+spring.datasource.username=test_h0ts_user
+spring.datasource.password=HB92yuAxLHO5lgGzRAdAzLtEOobIOABb
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
