--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,9 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 
 
 ## Postgres datasources
-spring.datasource.url=jdbc:postgresql://dpg-cqfsmvt6l47c73bl8bug-a.oregon-postgres.render.com/test_h0ts
-spring.datasource.username=test_h0ts_user
-spring.datasource.password=HB92yuAxLHO5lgGzRAdAzLtEOobIOABb
+spring.datasource.url=jdbc:postgresql://aws-0-us-east-1.pooler.supabase.com:6543/postgres?user=postgres.qtppxetlrvnoyryjcpzu
+spring.datasource.username=postgres.qtppxetlrvnoyryjcpzu
+spring.datasource.password=iZmkJdKEnKNanU4D
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
